
JasperReports Change Log
===================================

JasperReports 3.1.4 (2009-02-xx)
-----------------------------------

- new JASPER_REPORT built-in parameter;

- chart element live preview in design mode;

- minor bug fixes and improvements;





JasperReports 3.1.3 (2009-01-12)
-----------------------------------

- font extensions support to allow using TTF files without the need to install 
them into the system; this also allows using different TTF files for the same
logical font name, depending on the locale;

- primitive type chart properties replaced with equivalent object type properties 
to allow chart theme implementations to check if they were set or not;

- XML based chart theme implementations provided with the charts sample;

- minor bug fixes and improvements;





JasperReports 3.1.2 (2008-11-04)
-----------------------------------

- new report compiler based on the Rhino library to support JavaScript 
as the report expression language;

- simplified configuration for custom query executers, which can register 
themselves to a JasperReports deployment using the library's extensions support;

- new custom properties available at report level and element level, 
to mark document structure and produce produce PDF output that is compliant 
with Section 508 Amendment to the Rehabilitation Act of 1973, which governs 
accessibility of software solutions for people with disabilities.

- new TrueType font files (DejaVu fonts) are shipped with the sample reports;

- new chart theme implementation (name eye.candy.sixties) shipped with 
the charts samples, to show how chart themes can be used to change the overall 
appearance of charts generated with the build-in chart element;

- minor bug fixes and improvements;





JasperReports 3.1.0 (2008-09-17)
-----------------------------------

- chart themes support to allow changing the overall appearance 
of charts generated with the build-in chart element;
